--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -9,5 +9,7 @@
 
 	<!-- Add JS at the bottom of HTML file --> 
         <script src="./js/main.js"></script>
+	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/GVaeW76104A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
